	1308 Golden Axe:		NEED INFO.
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

=========================
07/29
	* Large mob_db update [Playtester]
	- added most of the missing X.4 / 11.1 drops
	- adjusted the drop rates of Odin Temple and Kiel's Mechanical Doll Factory
	- removed beret drop
	* Reverted the Combat Knife (wrong translated description) [Playtester]
	* Shockwave, Flasher and Freezing Trap now consume 2 trap items [Playtester]
	- this is correct according to info from RagnaInfo and some guides
	* Reverted the Hellion Revenant change. He IS supposed to be undead 3. [MasterOfMuppets]
	- And yes, he can still heal himself even though he is undead...
	- Note by Playtester: On eA right now he can't...
07/28
	* Fixed some summon skills [Playtester]
07/27
	* Hellion Revenant is now dark element so he can heal himself [Playtester]
	* Fixed Teddy Bear card [Playtester]
	* Hopefully fixed Solace card [Playtester]
	* Corrected Combat Knife reducing damage from DemiHumans by 10% instead of
	  increasing damage against them. [Skotlex]
	* Fixed Independence Memorial Hat weight, set to 0 [Toms]
07/25
	* Added rudeattacked teleport to Rachel MVPs [Playtester]
	* Added some NPC_Emotions for the Rachel mobs [Playtester]
	* Fixed Grandcross not being self-targeted for mobs [Playtester]
	* Final cooking drop rate adjustment [Playtester]
	* Fixed a bug in the item_db thanks to Toms [Playtester]
	* Fixed G_Kraben and G_Biolab3 mobs [Playtester]
	* Item updates by Haplo [Playtester]
07/24
	* Raised drop rate of cook books and sets a little [Playtester]
	* Raised drop rate of food a little [Playtester]
	* Raised drop rate of Kiel's and Valkyrie's drops a little [Playtester]