@@ -4,6 +4,11 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/07/29
+	* Made the SQL ping interval default to 7 hours. [Skotlex]
+	* Made skill_unitsetting remove the group when no unit-cells were placed
+	  down. basicly this means that if landprotector blocks all tiles, the group
+	  will be removed from memory, preventing said group from counting to the
+	  total number of skills you can set. [Skotlex]
 	* Fixed segmentation fault in script engine when calling something which is not a function [Toms]
 	* Fixed segmentation fault in script engine when activating DEBUG_RUN flag [Toms]
 2006/07/28
